5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1602_1014.log
== TEST (2019-03-22 17:42:13) 
-- CODE:
varA= input("digite um numero:")
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 17:43:51) 
-- CODE:
varA= float(input("digite um numero:"))
print(varA/100)

-- OUTPUT:
7.005
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 17:44:34) 
-- CODE:
varA= float(input("digite um numero:"))
print(varA/100)*30



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(varA/100)*30
TypeError: unsupported operand type(s) for *: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 17:45:05) 
-- CODE:
varA= float(input("digite um numero:"))
print=int(varA/100)*30



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(varA/100)*30
TypeError: unsupported operand type(s) for *: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 17:47:12) 
-- CODE:
varA= float(input("total de vendas:"))
print(round*0.3,2))



-- ERROR:
File "XXXX", line 2
    print(round*0.3,2))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 17:47:37) 
-- CODE:
varA= float(input("total de vendas:"))
print(round(varA*0.3,2))



-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 17:47:48) 
-- CODE:
varA= float(input("total de vendas:"))
print(round(varA*0.3,2))



-- EXECUTION TIME:
0.165326
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
